changed property name o=in fee type model and added authenticate request middleware
